fix: landing page grid spacing

--- a/components/page-landing.scss
+++ b/components/page-landing.scss
@@ -19,9 +19,9 @@
   }
 
   .page--landing__banner {
-    margin: 0 -1 * $spacing-06;
-    padding: $spacing-05 $spacing-06 $spacing-07 * 4;
+    padding: $spacing-05 0 $spacing-07 * 4;
     background: $layer-01;
+    box-shadow: $spacing-06 0 0 $layer-01, -1 * $spacing-06 0 0 $layer-01;
   }
 
   .page--landing__heading {
@@ -36,7 +36,7 @@
     height: auto;
   }
 
-  @media (max-width: 672px) {
+  @include breakpoint-down(md) {
     .page--landing__illo {
       max-width: 528px;
       width: 100%;
@@ -63,7 +63,7 @@
 
   .page--landing__r3 {
     height: 100%;
-    padding: 3rem 0;
+    padding: $spacing-09 0;
     box-sizing: border-box;
     background: $layer-01;
     box-shadow: $spacing-06 0 0 $layer-01, -1 * $spacing-06 0 0 $layer-01;
@@ -71,5 +71,9 @@
 
   .page--landing__label {
     @include type-style('productive-heading-01');
+
+    @include breakpoint-down(md) {
+      padding-bottom: $spacing-06;
+    }
   }
 }
